<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/add_personal"
        android:layout_marginTop="@dimen/guillotine_small_margin"
        style="@style/LinearLayout.GuillotineItem" >

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_add" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/add_to_personal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_generated"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_small_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_add" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/add_to_generated" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/update_generated"-->
        <!--style="@style/LinearLayout.GuillotineItem"-->
        <!--android:layout_marginTop="@dimen/guillotine_small_margin">-->

        <!--<ImageView-->
            <!--style="@style/ImageView.GuillotineItem"-->
            <!--android:src="@drawable/ic_recreate" />-->

        <!--<TextView-->
            <!--style="@style/TextView.GuillotineItem"-->
            <!--android:text="@string/update_generated" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/switchon_personal"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_small_margin">

        <Switch
            android:id="@+id/switch_personal"
            style="@style/ImageView.GuillotineItem"/>
        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/switch_personal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/switchon_generated"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_small_margin">


        <Switch
            android:id="@+id/switch_generated"
            style="@style/ImageView.GuillotineItem"/>
        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/switch_generated" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_person"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_small_margin">


        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_changeper" />
        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/change_person" />
    </LinearLayout>





</LinearLayout>